--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.5",
     "hardhat": "^2.6.8",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-deploy": "^0.8.9",
     "husky": "^7.0.1",
     "mocha": "^9.0.1",
