reduce contract size

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.3.2",
     "@openzeppelin/hardhat-defender": "^1.7.0",
     "@openzeppelin/hardhat-upgrades": "^1.24.0",
+    "@positionex/position-helper": "^1.0.3",
     "@positionlab/hardhat-etherscan": "^0.1.1",
     "@remix-project/remixd": "^0.6.9",
     "dotenv": "^10.0.0",
@@ -62,9 +63,11 @@
     "fs": "^0.0.1-security",
     "hardhat-contract-sizer": "^2.1.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "i": "^0.3.7",
     "mocha-chai-jest-snapshot": "^1.1.2",
     "nedb": "^1.8.0",
     "nedb-promises": "^5.0.1",
+    "npm": "^9.7.1",
     "prompt-sync": "^4.2.0",
     "semaphore": "^1.1.0",
     "solidity-coverage": "^0.7.20"
